hack/config/policy/controlplane/tests/kube-apiserver-scale-hibernated/scale.yaml
kind: Scale
apiVersion: autoscaling/v1
metadata:
  name: kube-apiserver
  namespace: shoot--ixywdlfvei--sharding
spec:
  replicas: 0
