hack/config/policy/controlplane/tests/kube-apiserver-scale-hibernated/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kube-apiserver-scale-hibernated
policies:
- ../../kube-apiserver-scale.yaml
resources:
# spec.replicas=0 -> expect skip
- scale.yaml
variables: variables.yaml
results:
- policy: shoot--timebertt--sharding/kube-apiserver-scale
  rule: replicas-scale
  resources:
  - shoot--timebertt--sharding/kube-apiserver
  kind: Scale
  result: skip
